# audio_core

./: .gitignore  README.md
Infrastructure_Core/: CMakeLists.txt
Infrastructure_Core/Components/: IApplication.cpp  IApplication.h  IBoundary.cpp  IBoundary.h  IComponent.cpp  IComponent.h  IConnector.cpp  IConnector.h  IConnectorListener.cpp  IConnectorListener.h  IDevice.cpp  IDevice.h  IFactory.cpp  IFactory.h  ILifeCycle.h  IListener.cpp  IListener.h  IService.cpp  IService.h
Infrastructure_Core/Debug/: CMakeCache.txt  Infrastructure_Core.cbp  Makefile  cmake_install.cmake
Infrastructure_Core/Debug/includes/: CMakeLists.txt
Infrastructure_Core/Debug/includes/common/: CommonDefinitions.h  IControlPlane.h  IRtpCore.h
Infrastructure_Core/Debug/includes/components/: IConnector.h  IConnectorEventListener.h  IDevice.h  IEventListener.h  IEventSender.h  IFactory.h  IService.h
Infrastructure_Core/Debug/includes/configuration/: CConfiguration.h
Infrastructure_Core/Debug/includes/configuration/XML/: CConfigurationXmlParser.cpp  CConfigurationXmlParser.h
Infrastructure_Core/Debug/includes/disruptor/: CDisruptor.h  CDisruptorElementFactory.h  IDisruptorConsumer.h  IDisruptorConsumerStrategy.h
Infrastructure_Core/Debug/includes/list/: CArrayVector.h
Infrastructure_Core/Debug/includes/logger/: CLogger.h
Infrastructure_Core/Debug/includes/map/: IMap.h
Infrastructure_Core/Debug/includes/pool/: IPool.h  IPoolElement.h  IPoolElementFactory.h
Infrastructure_Core/Debug/includes/pool/ring_buffer/: CRingBuffer.cpp  CRingBuffer.h  CRingBufferMultipleProducerStrategy.cpp  CRingBufferMultipleProducerStrategy.h  CRingBufferSingleProducerStrategy.cpp
Infrastructure_Core/Debug/includes/queue/: CBlockingQueue.h  IQueue.h
Infrastructure_Core/Debug/includes/task/: ITask.h
Infrastructure_Core/Disruptor/: CDisruptor.cpp  CDisruptor.h
Infrastructure_Core/Logger/: CLogger.cpp  CLogger.h
Infrastructure_Core/Queue/: CMPSCQueue.cpp  CMPSCQueue.h  CSPSCQueue.cpp  CSPSCQueue.h  IQueue.h
Infrastructure_Core/Task/: IScheduledTask.cpp  IScheduledTask.h  ITask.cpp  ITask.h
Infrastructure_Core/common/: IControlPlane.cpp  IPcmCore.cpp  IPcmCore.h  IRtpCore.cpp  IRtpCore.h
Infrastructure_Core/common/objects/: CVoiceFrameElement.cpp  CVoiceFrameElement.h
Infrastructure_Core/components/: IApplication.h  IComponent.cpp  IComponent.h  IConnector.cpp  IConnectorEventListener.cpp  IDevice.cpp  IDevice.h  IEventSender.cpp  IEventSender.h  ILifeCycle.cpp  IService.cpp
Infrastructure_Core/configuration/: CConfiguration.cpp  IConfigurationParser.cpp  IConfigurationParser.h
Infrastructure_Core/disruptor/: CDeepDisruptorElement.cpp  CDeepDisruptorElement.h  CDisruptor.cpp  CDisruptorConsumerBlockingStrategy.cpp  CDisruptorConsumerBlockingStrategy.h  CDisruptorElement.cpp  CDisruptorElement.h  CDisruptorElementFactory.cpp  IDisruptorConsumerStrategy.cpp
Infrastructure_Core/list/: IList.h
Infrastructure_Core/logger/: CLogger.cpp
Infrastructure_Core/pool/: IPool.cpp  IPoolElement.cpp  IPoolElementFactory.cpp
Infrastructure_Core/pool/ring_buffer/: CRingBufferSingleProducerStrategy.h  IRingBufferProducerStrategy.h
Infrastructure_Core/queue/: CMPSCLockFreeQueue.h  CSPSCLockFreeQueue.h
Infrastructure_Core/task/: IScheduledTask.cpp  IScheduledTask.h  ITask.cpp
Infrastructure_Core/time/: CStopWatch.cpp  CStopWatch.h
Infrastructure_Core_Debug/: CMakeCache.txt  Infrastructure_Core.cbp  Makefile  cmake_install.cmake
PCM_Core/: CMakeLists.txt
PCM_Core/Applications/PCM_Processor/: CPcmProcessorApplication.cpp  CPcmProcessorApplication.h
PCM_Core/Services/Filter_Service/: CFilterService.h
PCM_Core/applications/pcm_processor/: CPcmProcessorApplication.cpp  CPcmProcessorApplication.h
PCM_Core/applications/pcm_processor/logic/: CAudioSourceProcessor.cpp  CAudioSourceProcessor.h
PCM_Core/applications/pcm_transform/: CPcmTransformApplication.cpp  CPcmTransformApplication.h
PCM_Core/applications/pcm_transform/logic/: CPcmRecorder.cpp  CPcmRecorder.h
PCM_Core/common/: PcmCoreDefinitions.h  PcmCoreTypes.h
PCM_Core/config/: connectors.xml  logger.xml  pcm_core_config.xml  pcm_transform_config.xml
PCM_Core/factory/: CPcmCoreFactory.cpp  CPcmCoreFactory.h
PCM_Core/services/audio_source/: IAudioSourceService.cpp  IAudioSourceService.h
PCM_Core/services/audio_source/alsa/: CAlsaCaptureService.cpp  CAlsaCaptureService.h  CAlsaParamsConfigurator.cpp  CAlsaParamsConfigurator.h  CAlsaPlaybackService.cpp  CAlsaPlaybackService.h
PCM_Core/services/audio_source/binary_file/: CBinaryFileReaderService.cpp  CBinaryFileReaderService.h  CBinaryFileWriterService.cpp  CBinaryFileWriterService.h
PCM_Core/services/filter_service/: CFilterService.cpp  CFilterService.h  IFilterService.cpp  IFilterService.h
PCM_Core_Debug/: CMakeCache.txt  Makefile  PCM_Core.cbp  cmake_install.cmake
RTP_Core/: CMakeLists.txt  rtp_core.cpp  rtp_core.h
